tests/ui/macros/vec-macro-in-pattern.stderr
error: expected pattern, found `#`
  --> $DIR/vec-macro-in-pattern.rs:7:14
   |
LL |         Some(vec![43]) => {}
   |              ^^^^^^^^
   |              |
   |              expected pattern
   |              in this macro invocation
   |              this macro call doesn't expand to a pattern
   |
   = note: this error originates in the macro `vec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

